--- a/build.gradle
+++ b/build.gradle
@@ -108,3 +108,5 @@ task("incrementBuildNumber") {
 
 // Uncomment this line if you want to auto-upload to CurseForge when you build. This requires you to setup curse.gradle yourself.
 // fileTree('gradle').include('curse.gradle').collect().sort().each { apply from: it }
+
+idea { module { inheritOutputDirs = true } }
